:recycle: refactor: organize codes for expense form

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -27,4 +27,10 @@
       rgba(252, 252, 252, 1) 100%
     );
   }
+
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
